--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "angular-route": "~1.2.14",
     "bootstrap": "~3.1",
     "ng-grid": "~2.0.7",
-    "jquery": "~2.1.0"
+    "jquery": "~2.1.0",
+    "underscore": "~1.6.0"
   }
 }
