--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
   "dependencies": {
     "express": "~3.2.4",
     "restler": "~3.1.0",
-    "firebase": "~1.0.2",
-    "firebase-token-generator": "~0.1.4",
+    "firebase": "~2.4.1",
     "q": "~1.0.0"
+  },
+  "engines": {
+    "node": "4.3.2"
   }
 }
