--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
     "angular-timer": "~1.3.3",
     "bootstrap": "~3.3.2",
     "ng-grid": "~2.0.14",
+    "angular-smart-table": "~2.1.8",
     "jquery": "~2.1.3",
     "lodash": "~2.4.1"
   }
